--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <hr>
         <pre><a href="../">../</a>
     <a href="RHG/">RHG/</a>
+    <a href="com/">com/</a>
     </pre>
     <hr>
     </body>
