--- a/com/index.html
+++ b/com/index.html
@@ -3,3 +3,11 @@
   <head>
     <title>Index of /com/</title>
   </head>
+  <body>
+    <h1>Index if /com/</h1>
+    <hr>
+    <pre><a href="../">../</a>
+      <a href="mojang/">mojang/</a>
+    </pre>
+  </body>
+</html>
