--- a/com/Minecraft/piston-meta/index.html
+++ b/com/Minecraft/piston-meta/index.html
@@ -6,8 +6,8 @@
 <body>
   <h1>Index of /com/Minecraft/piston-meta/</h1>
   <hr>
-  <pre><a href="../"></a>
-  <a href="mc/"></a>
+  <pre><a href="../">../</a>
+  <a href="mc/">mc/</a>
   </pre>
   <hr>
 </body>
