--- a/com/index.html
+++ b/com/index.html
@@ -7,7 +7,7 @@
     <h1>Index if /com/</h1>
     <hr>
     <pre><a href="../">../</a>
-      <a href="minecraft/">minecraft/</a>
+      <a href="Minecraft/">Minecraft/</a>
     </pre>
     <hr>
   </body>
